--- a/day01/src/main/resources/application.properties
+++ b/day01/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8008
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
