--- a/day01/src/main/resources/application.yml
+++ b/day01/src/main/resources/application.yml
@@ -5,3 +5,23 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
+    ## 数据源类型
+    type: com.alibaba.druid.pool.DruidDataSource
+    ## 初始化大小，最小，最大
+    initialSize: 5
+    minIdle: 5
+    maxActive: 20
+    ## 配置获取连接等待超时的时间，单位是毫秒
+    maxWait: 6000
+    ## 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+    timeBetweenEvictionRunsMillis: 6000
+    ## 配置一个连接在池中最小生存的时间，单位是毫秒
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    ## 打开pscache,并且指定每个连接上pscache的大小
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+    ## 配置监控统计拦截的filters,去掉后监控界面的SQL无法统计，‘wall'用于防火墙
